--- a/tox.ini
+++ b/tox.ini
@@ -17,10 +17,10 @@ deps =
 	isort
 	black
 commands =
-	flake8 python_template tests
-	mypy python_template tests
-	isort --check python_template tests
-	black --check python_template tests
+	flake8 escape_room1 tests
+	mypy escape_room1 tests
+	isort --check escape_room1 tests
+	black --check escape_room1 tests
 skip-install = True
 
 [flake8]
