--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "python-template"
+name = "escape-room1"
 version = "0.1.0"
-description = "A template for Python projects"
+description = "A non-Markovian grid word environment"
 authors = ["Roberto Cipollone <cipollone.rt@gmail.com>"]
 
 [tool.poetry.dependencies]
