--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Roberto Cipollone <cipollone.rt@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-gym-sapientino = {git = "https://github.com/whitemech/gym-sapientino.git", rev = "dfe2227"}
+gym-sapientino = {git = "https://github.com/whitemech/gym-sapientino.git", branch = "data-workaround"}
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.22.0"
